myproject_src =files([
    'thread.h', 'main.cpp'
])
executable(
    'hw11',#название исполняемого файла
    include_directories: src,#где ищутся заголовочные файлы
    sources: myproject_src,#список исходный файлов
    dependencies: [],#зависимости проекта (если имеются)
    install:true#устанавливать ли файл
)