myproject_src = files([
    'main.cpp',
    'vector.h'
])
executable(
    'hw2',#название исполняемого файла
    include_directories: src,#где ищутся заголовочные файлы
    sources: myproject_src,#список исходный файлов
    dependencies: [],#зависимости проекта (если имеются)
    install:false#устанавливать ли файл
)